# geovault

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: uv_django.yml
accounts/: forms.py  urls.py  views.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py
geodata/: apps.py  forms.py  models.py  urls.py  views.py
geodata/migrations/: 0001_initial.py
geodata/utils/: geoprocessing.py
geovault/: asgi.py  roles.py  settings.py  urls.py  wsgi.py
media/raw_files/: query_result_2025-04-01T14_43_32.451916-03_00.csv
nginx/conf/: nginx.conf
templates/: base.html
templates/accounts/: login.html  profile.html  register.html
templates/geodata/: farmer_dashboard.html  process_file.html  process_raw_file.html  technician_dashboard.html  upload_file.html  view_data.html
